cloudformation/NewVPC_Spoke_GWLBe_MultiAZ.template.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "(v26.3.1) AWS CFT to deploy a multi AZ spoke VPC for a GWLB A-A solution, repo: https://github.com/FortinetCloudCSE/fortigate-aws-gwlb-cloudformation",
	"Metadata": {
		"AWS::CloudFormation::Interface": {
			"ParameterGroups": [
				{
					"Label": {
						"default": "VPC Configuration"
					},
					"Parameters": [
						"VPCCIDR",
						"NumOfAZs",
						"AZs",
						"PublicSubnetCIDRs",
						"PrivateSubnetCIDRs",
						"GwlbSubnetCIDRs",
						"DistributedInspection",
						"RouteToCwanOrTgw"
					]
				},
				{
					"Label": {
						"default": "GWLBe Configuration"
					},
					"Parameters": [
						"VpcEndpointServiceName"
					]
				},
				{
					"Label": {
						"default": "TGW Configuration"
					},
					"Parameters": [
						"TransitGateway",
						"TransitGatewaySecurityRtb",
						"TransitGatewaySpokeRtb"
					]
				},
				{
					"Label": {
						"default": "CWAN Configuration"
					},
					"Parameters": [
						"CloudWan",
						"CloudWanSegmentKey",
						"CloudWanSegmentValue"
					]
				}
			]
		}
	},
	"Parameters": {
		"VPCCIDR": {
			"Type": "String",
			"Default": "10.1.0.0/16",
			"Description": "Provide a network CIDR for the VPC",
			"AllowedPattern": "(\\d{1,3}\\.){3}\\d{1,3}/\\d{1,2}",
			"ConstraintDescription": "Must be a valid CIDR block format."
		},
		"NumOfAZs": {
			"Type": "String",
			"Default": "2",
			"Description": "Select the number of Availability Zones to use (Min 2, Max 3)",
			"AllowedValues": [
				"2",
				"3"
			]
		},
		"AZs": {
			"Type": "List<AWS::EC2::AvailabilityZone::Name>",
			"Description": "Select the Availability Zones (Min 2, Max 3)"
		},
		"PublicSubnetCIDRs": {
			"Type": "CommaDelimitedList",
			"Default": "10.1.1.0/24, 10.1.2.0/24, 10.1.3.0/24",
			"Description": "Provide a list of network CIDRs for Public Subnets (Min 2, Max 3)"
		},
		"PrivateSubnetCIDRs": {
			"Type": "CommaDelimitedList",
			"Default": "10.1.4.0/24, 10.1.5.0/24, 10.1.6.0/24",
			"Description": "Provide a list of network CIDRs for Private Subnets (Min 2, Max 3)"
		},
		"GwlbSubnetCIDRs": {
			"Type": "CommaDelimitedList",
			"Default": "10.1.7.0/24, 10.1.8.0/24, 10.1.9.0/24",
			"Description": "Provide a list of network CIDRs for GLWB Subnets (Min 2, Max 3)"
		},
		"DistributedInspection": {
			"Type": "String",
			"Description": "Select an option for distributed inspection so VPC routes can be created (use Cwan or Tgw parameters below for centralized egress and/or east-west inspection)",
			"AllowedValues": [
				"1: Distributed Ingress @ IGW",
				"2: Distributed Ingress @ Public Subnets",
				"3: Distributed Egress",
				"4: Option 2 + 3 above",
				"5: No Distributed Ingress or Egress Inspection (use Cwan or Tgw for centralized inspection)"
			]
		},
		"TransitGateway": {
			"Type": "String",
			"Description": "[Leave blank if Tgw will not be used] Provide the Transit GW ID to attach to"
		},
		"TransitGatewaySecurityRtb": {
			"Type": "String",
			"Description": "[Leave blank if Tgw will not be used] Provide the Transit GW RouteTable ID that the security VPC is associated to"
		},
		"TransitGatewaySpokeRtb": {
			"Type": "String",
			"Description": "[Leave blank if Tgw will not be used] Provide the Transit GW RouteTable ID that your spoke VPCs will be associated to"
		},
		"CloudWan": {
			"Type": "String",
			"Description": "[Leave blank if Cwan will not be used] Provide the Cloud WAN Core Network ID to attach to"
		},
		"CloudWanSegmentKey": {
			"Type": "String",
			"Description": "[Leave blank if Cwan will not be used] Provide the name that should be used to create a Tag on the Cwan VPC Attachment to allow CWAN attachment automation"
		},
		"CloudWanSegmentValue": {
			"Type": "String",
			"Description": "[Leave blank if Cwan will not be used] Provide the value that should be used to create a Tag on the Cwan VPC Attachment to allow CWAN attachment automation"
		},
		"VpcEndpointServiceName": {
			"Type": "String",
			"Description": "Provide the Vpc Endpoint Service Name that is associated to your Gateway Load Balancer."
		},
		"RouteToCwanOrTgw": {
			"Type": "String",
			"Description": "[Ignore if Cwan or Tgw will not be used] Provide a network CIDR to create VPC routes to reach private resources via TGW or CWAN (0.0.0.0/0 for centralized egress and east-west or RFC-1918 for centralized east-west)"
		}
	},
	"Conditions": {
		"3AZs": {
			"Fn::Equals": [
				{
					"Ref": "NumOfAZs"
				},
				"3"
			]
		},
		"UseGwlbe": {
			"Fn::Not": [
				{
					"Condition": "VpcRoutingOption5"
				}
			]
		},
		"3AZsAndUseGwlbe": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "UseGwlbe"
				}
			]
		},
		"TransitGateway": {
			"Fn::And": [
				{
					"Fn::Not": [
						{
							"Fn::Equals": [
								{
									"Ref": "TransitGateway"
								},
								""
							]
						}
					]
				},
				{
					"Fn::Not": [
						{
							"Fn::Equals": [
								{
									"Ref": "TransitGatewaySecurityRtb"
								},
								""
							]
						}
					]
				},
				{
					"Fn::Not": [
						{
							"Fn::Equals": [
								{
									"Ref": "TransitGatewaySpokeRtb"
								},
								""
							]
						}
					]
				},
				{
					"Fn::Equals": [
						{
							"Ref": "CloudWan"
						},
						""
					]
				}
			]
		},
		"CloudWan": {
			"Fn::And": [
				{
					"Fn::Not": [
						{
							"Fn::Equals": [
								{
									"Ref": "CloudWan"
								},
								""
							]
						}
					]
				},
				{
					"Fn::Not": [
						{
							"Fn::Equals": [
								{
									"Ref": "CloudWanSegmentKey"
								},
								""
							]
						}
					]
				},
				{
					"Fn::Not": [
						{
							"Fn::Equals": [
								{
									"Ref": "CloudWanSegmentValue"
								},
								""
							]
						}
					]
				},
				{
					"Fn::Equals": [
						{
							"Ref": "TransitGateway"
						},
						""
					]
				}
			]
		},
		"3AZsAndTgw": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "TransitGateway"
				}
			]
		},
		"3AZsAndCwan": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "CloudWan"
				}
			]
		},
		"UseNatGw": {
			"Fn::Not": [
				{
					"Fn::Equals": [
						{
							"Ref": "RouteToCwanOrTgw"
						},
						"0.0.0.0/0"
					]
				}
			]
		},
		"3AZsAndUseNatGw": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "UseNatGw"
				}
			]
		},
		"VpcRoutingOption1": {
			"Fn::Equals": [
				{
					"Ref": "DistributedInspection"
				},
				"1: Distributed Ingress @ IGW"
			]
		},
		"VpcRoutingOption2": {
			"Fn::Equals": [
				{
					"Ref": "DistributedInspection"
				},
				"2: Distributed Ingress @ Public Subnets"
			]
		},
		"VpcRoutingOption3": {
			"Fn::Equals": [
				{
					"Ref": "DistributedInspection"
				},
				"3: Distributed Egress"
			]
		},
		"VpcRoutingOption4": {
			"Fn::Equals": [
				{
					"Ref": "DistributedInspection"
				},
				"4: Option 2 + 3 above"
			]
		},
		"VpcRoutingOption5": {
			"Fn::Equals": [
				{
					"Ref": "DistributedInspection"
				},
				"5: No Distributed Ingress or Egress Inspection (use Cwan or Tgw for centralized inspection)"
			]
		},
		"3AZsAndVpcRoutingOption1": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "VpcRoutingOption1"
				}
			]
		},
		"3AZsAndVpcRoutingOption2": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "VpcRoutingOption2"
				}
			]
		},
		"3AZsAndVpcRoutingOption3": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "VpcRoutingOption3"
				}
			]
		},
		"3AZsAndVpcRoutingOption4": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "VpcRoutingOption4"
				}
			]
		},
		"3AZsAndVpcRoutingOption5": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "VpcRoutingOption5"
				}
			]
		},
		"UseNatGwAndVpcRoutingOption1": {
			"Fn::And": [
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption1"
				}
			]
		},
		"UseNatGwAndVpcRoutingOption2": {
			"Fn::And": [
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption2"
				}
			]
		},
		"UseNatGwAndVpcRoutingOption3": {
			"Fn::And": [
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption3"
				}
			]
		},
		"UseNatGwAndVpcRoutingOption4": {
			"Fn::And": [
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption4"
				}
			]
		},
		"UseNatGwAndVpcRoutingOption5": {
			"Fn::And": [
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption5"
				}
			]
		},
		"3AZsAndUseNatGwAndVpcRoutingOption1": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption1"
				}
			]
		},
		"3AZsAndUseNatGwAndVpcRoutingOption2": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption2"
				}
			]
		},
		"3AZsAndUseNatGwAndVpcRoutingOption4": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption4"
				}
			]
		},
		"3AZsAndUseNatGwAndVpcRoutingOption5": {
			"Fn::And": [
				{
					"Condition": "3AZs"
				},
				{
					"Condition": "UseNatGw"
				},
				{
					"Condition": "VpcRoutingOption5"
				}
			]
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VPCCIDR"
				},
				"EnableDnsSupport": "true",
				"EnableDnsHostnames": "true",
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-VPC"
						}
					}
				]
			}
		},
		"PublicSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-PublicSubnet1"
						}
					}
				]
			}
		},
		"PublicSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-PublicSubnet2"
						}
					}
				]
			}
		},
		"PublicSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Condition": "3AZs",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"2",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-PublicSubnet3"
						}
					}
				]
			}
		},
		"PrivateSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-PrivateSubnet1"
						}
					}
				]
			}
		},
		"PrivateSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-PrivateSubnet2"
						}
					}
				]
			}
		},
		"PrivateSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Condition": "3AZs",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"2",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-PrivateSubnet3"
						}
					}
				]
			}
		},
		"GwlbSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "GwlbSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbSubnet1"
						}
					}
				]
			}
		},
		"GwlbSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "GwlbSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbSubnet2"
						}
					}
				]
			}
		},
		"GwlbSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Condition": "3AZs",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "GwlbSubnetCIDRs"
						}
					]
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"2",
						{
							"Ref": "AZs"
						}
					]
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbSubnet3"
						}
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"-",
								[
									{
										"Ref": "AWS::StackName"
									},
									"IGW"
								]
							]
						}
					}
				]
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"GwlbEndpoint1": {
			"Type": "AWS::EC2::VPCEndpoint",
			"Condition": "UseGwlbe",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"ServiceName": {
					"Ref": "VpcEndpointServiceName"
				},
				"VpcEndpointType": "GatewayLoadBalancer",
				"SubnetIds": [
					{
						"Ref": "GwlbSubnet1"
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbEndpoint1"
						}
					}
				]
			}
		},
		"GwlbEndpoint2": {
			"Type": "AWS::EC2::VPCEndpoint",
			"Condition": "UseGwlbe",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"ServiceName": {
					"Ref": "VpcEndpointServiceName"
				},
				"VpcEndpointType": "GatewayLoadBalancer",
				"SubnetIds": [
					{
						"Ref": "GwlbSubnet2"
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbEndpoint2"
						}
					}
				]
			}
		},
		"GwlbEndpoint3": {
			"Type": "AWS::EC2::VPCEndpoint",
			"Condition": "3AZsAndUseGwlbe",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"ServiceName": {
					"Ref": "VpcEndpointServiceName"
				},
				"VpcEndpointType": "GatewayLoadBalancer",
				"SubnetIds": [
					{
						"Ref": "GwlbSubnet3"
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbEndpoint3"
						}
					}
				]
			}
		},
		"NatGatewayEIP1": {
			"Type": "AWS::EC2::EIP",
			"Condition": "UseNatGw",
			"DependsOn": "AttachGateway",
			"Properties": {
				"Domain": "vpc",
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-NatGatewayEIP-AZ1"
						}
					}
				]
			}
		},
		"NatGatewayEIP2": {
			"Type": "AWS::EC2::EIP",
			"Condition": "UseNatGw",
			"DependsOn": "AttachGateway",
			"Properties": {
				"Domain": "vpc",
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-NatGatewayEIP-AZ2"
						}
					}
				]
			}
		},
		"NatGatewayEIP3": {
			"Type": "AWS::EC2::EIP",
			"Condition": "3AZsAndUseNatGw",
			"DependsOn": "AttachGateway",
			"Properties": {
				"Domain": "vpc",
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-NatGatewayEIP-AZ3"
						}
					}
				]
			}
		},
		"NatGateway": {
			"Type": "AWS::EC2::NatGateway",
			"Condition": "UseNatGw",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"ConnectivityType": "public",
				"AvailabilityMode": "regional",
				"AvailabilityZoneAddresses": [
					{
						"AvailabilityZone": {
							"Fn::Select": [
								0,
								{
									"Ref": "AZs"
								}
							]
						},
						"AllocationIds": [
							{
								"Fn::GetAtt": [
									"NatGatewayEIP1",
									"AllocationId"
								]
							}
						]
					},
					{
						"AvailabilityZone": {
							"Fn::Select": [
								1,
								{
									"Ref": "AZs"
								}
							]
						},
						"AllocationIds": [
							{
								"Fn::GetAtt": [
									"NatGatewayEIP2",
									"AllocationId"
								]
							}
						]
					},
					{
						"Fn::If": [
							"3AZs",
							{
								"AvailabilityZone": {
									"Fn::Select": [
										2,
										{
											"Ref": "AZs"
										}
									]
								},
								"AllocationIds": [
									{
										"Fn::GetAtt": [
											"NatGatewayEIP3",
											"AllocationId"
										]
									}
								]
							},
							{
								"Ref": "AWS::NoValue"
							}
						]
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-NatGateway-Regional"
						}
					}
				]
			}
		},
		"TransitGatewayVpcAttachment": {
			"Type": "AWS::EC2::TransitGatewayAttachment",
			"Condition": "TransitGateway",
			"Properties": {
				"SubnetIds": [
					{
						"Ref": "PrivateSubnet1"
					},
					{
						"Ref": "PrivateSubnet2"
					},
					{
						"Fn::If": [
							"3AZs",
							{
								"Ref": "PrivateSubnet3"
							},
							{
								"Ref": "AWS::NoValue"
							}
						]
					}
				],
				"TransitGatewayId": {
					"Ref": "TransitGateway"
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"Options": {
					"ApplianceModeSupport": "enable"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-vpc-attachment"
						}
					}
				]
			}
		},
		"TransitGatewayVpcAttachmentAssociation": {
			"Type": "AWS::EC2::TransitGatewayRouteTableAssociation",
			"DependsOn": "TransitGatewayVpcAttachment",
			"Condition": "TransitGateway",
			"Properties": {
				"TransitGatewayAttachmentId": {
					"Ref": "TransitGatewayVpcAttachment"
				},
				"TransitGatewayRouteTableId": {
					"Ref": "TransitGatewaySpokeRtb"
				}
			}
		},
		"TransitGatewayVpcRouteTablePropagation": {
			"Type": "AWS::EC2::TransitGatewayRouteTablePropagation",
			"DependsOn": "TransitGatewayVpcAttachment",
			"Condition": "TransitGateway",
			"Properties": {
				"TransitGatewayAttachmentId": {
					"Ref": "TransitGatewayVpcAttachment"
				},
				"TransitGatewayRouteTableId": {
					"Ref": "TransitGatewaySecurityRtb"
				}
			}
		},
		"CloudWanVpcAttachment": {
			"Type": "AWS::NetworkManager::VpcAttachment",
			"Condition": "CloudWan",
			"Properties": {
				"CoreNetworkId": {
					"Ref": "CloudWan"
				},
				"Options": {
					"ApplianceModeSupport": "true"
				},
				"SubnetArns": [
					{
						"Fn::Sub": "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${PrivateSubnet1}"
					},
					{
						"Fn::Sub": "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${PrivateSubnet2}"
					},
					{
						"Fn::If": [
							"3AZs",
							{
								"Fn::Sub": "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${PrivateSubnet3}"
							},
							{
								"Ref": "AWS::NoValue"
							}
						]
					}
				],
				"VpcArn": {
					"Fn::Sub": "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:vpc/${VPC}"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-vpc-attacment"
						}
					},
					{
						"Key": {
							"Ref": "CloudWanSegmentKey"
						},
						"Value": {
							"Ref": "CloudWanSegmentValue"
						}
					}
				]
			}
		},
		"Public1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-Public1RouteTable"
						}
					}
				]
			}
		},
		"Public2RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-Public2RouteTable"
						}
					}
				]
			}
		},
		"Public3RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Condition": "3AZs",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-Public3RouteTable"
						}
					}
				]
			}
		},
		"Private1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-Private1RouteTable"
						}
					}
				]
			}
		},
		"Private2RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-Private2RouteTable"
						}
					}
				]
			}
		},
		"Private3RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Condition": "3AZs",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-Private3RouteTable"
						}
					}
				]
			}
		},
		"GwlbRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-GwlbRouteTable"
						}
					}
				]
			}
		},
		"IgwRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${AWS::StackName}-IgwRouteTable"
						}
					}
				]
			}
		},
		"VpcRoutingOption1RoutePublicSubnets1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption1",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "IgwRouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption1RoutePublicSubnets2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption1",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "IgwRouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption1RoutePublicSubnets3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption1",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "IgwRouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption1RouteGwlb1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption1",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption1RouteGwlb2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption1",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption1RouteGwlb3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption1",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption1RouteIGW": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption1",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption1RouteDefaultRoute1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption1RouteDefaultRoute1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption1RouteDefaultRoute1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndUseNatGwAndVpcRoutingOption1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets2Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets2Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets2Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets3Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets3Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption2RoutePrivateSubnets3Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets2Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets2Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets2Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets3Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets3Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption2",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption2RoutePublicSubnets3Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption2",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption2RouteDefaultRoute1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption2RouteDefaultRoute1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption2RouteDefaultRoute1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndUseNatGwAndVpcRoutingOption2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption2RouteDefaultRoute2az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption2RouteDefaultRoute2az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption2RouteDefaultRoute2az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndUseNatGwAndVpcRoutingOption2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption3RoutePrivateSubnets1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption3",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Fn::GetAtt": [
						"NatGateway",
						"RouteTableId"
					]
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption3RoutePrivateSubnets2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption3",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Fn::GetAtt": [
						"NatGateway",
						"RouteTableId"
					]
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption3RoutePrivateSubnets3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption3",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Fn::GetAtt": [
						"NatGateway",
						"RouteTableId"
					]
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption3",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption3",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption3",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute2Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption3",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute2Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption3",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute2Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption3",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption3RouteDefaultRoute3": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption3",
			"Properties": {
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets2Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets2Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets2Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets3Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets3Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets3Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Fn::GetAtt": [
						"NatGateway",
						"RouteTableId"
					]
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Fn::GetAtt": [
						"NatGateway",
						"RouteTableId"
					]
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePrivateSubnets3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Fn::GetAtt": [
						"NatGateway",
						"RouteTableId"
					]
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PrivateSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"0",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets2Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets2Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets2Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"1",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets3Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets3Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RoutePublicSubnets3Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Fn::Select": [
						"2",
						{
							"Ref": "PublicSubnetCIDRs"
						}
					]
				},
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint1",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint1"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption4",
			"DependsOn": "GwlbEndpoint2",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint2"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption4",
			"DependsOn": "GwlbEndpoint3",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"VpcEndpointId": {
					"Ref": "GwlbEndpoint3"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute2az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption4",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute2az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption4",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute2az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndUseNatGwAndVpcRoutingOption4",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption4RouteDefaultRoute3": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption4",
			"Properties": {
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption5RouteDefaultRoute1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption5",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption5RouteDefaultRoute1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "VpcRoutingOption5",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption5RouteDefaultRoute1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndVpcRoutingOption5",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"VpcRoutingOption5RouteNatGateway1Az1": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption5",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption5RouteNatGateway1Az2": {
			"Type": "AWS::EC2::Route",
			"Condition": "UseNatGwAndVpcRoutingOption5",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"VpcRoutingOption5RouteNatGateway1Az3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndUseNatGwAndVpcRoutingOption5",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway"
				}
			}
		},
		"RouteTgw1": {
			"Type": "AWS::EC2::Route",
			"Condition": "TransitGateway",
			"DependsOn": "TransitGatewayVpcAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Ref": "RouteToCwanOrTgw"
				},
				"TransitGatewayId": {
					"Ref": "TransitGateway"
				}
			}
		},
		"RouteTgw2": {
			"Type": "AWS::EC2::Route",
			"Condition": "TransitGateway",
			"DependsOn": "TransitGatewayVpcAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Ref": "RouteToCwanOrTgw"
				},
				"TransitGatewayId": {
					"Ref": "TransitGateway"
				}
			}
		},
		"RouteTgw3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndTgw",
			"DependsOn": "TransitGatewayVpcAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Ref": "RouteToCwanOrTgw"
				},
				"TransitGatewayId": {
					"Ref": "TransitGateway"
				}
			}
		},
		"RouteCwan1": {
			"Type": "AWS::EC2::Route",
			"Condition": "CloudWan",
			"DependsOn": "CloudWanVpcAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				},
				"DestinationCidrBlock": {
					"Ref": "RouteToCwanOrTgw"
				},
				"CoreNetworkArn": {
					"Fn::Sub": "arn:aws:networkmanager::${AWS::AccountId}:core-network/${CloudWan}"
				}
			}
		},
		"RouteCwan2": {
			"Type": "AWS::EC2::Route",
			"Condition": "CloudWan",
			"DependsOn": "CloudWanVpcAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				},
				"DestinationCidrBlock": {
					"Ref": "RouteToCwanOrTgw"
				},
				"CoreNetworkArn": {
					"Fn::Sub": "arn:aws:networkmanager::${AWS::AccountId}:core-network/${CloudWan}"
				}
			}
		},
		"RouteCwan3": {
			"Type": "AWS::EC2::Route",
			"Condition": "3AZsAndCwan",
			"DependsOn": "CloudWanVpcAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				},
				"DestinationCidrBlock": {
					"Ref": "RouteToCwanOrTgw"
				},
				"CoreNetworkArn": {
					"Fn::Sub": "arn:aws:networkmanager::${AWS::AccountId}:core-network/${CloudWan}"
				}
			}
		},
		"PublicSubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet1"
				},
				"RouteTableId": {
					"Ref": "Public1RouteTable"
				}
			}
		},
		"PublicSubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet2"
				},
				"RouteTableId": {
					"Ref": "Public2RouteTable"
				}
			}
		},
		"PublicSubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Condition": "3AZs",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet3"
				},
				"RouteTableId": {
					"Ref": "Public3RouteTable"
				}
			}
		},
		"PrivateSubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet1"
				},
				"RouteTableId": {
					"Ref": "Private1RouteTable"
				}
			}
		},
		"PrivateSubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet2"
				},
				"RouteTableId": {
					"Ref": "Private2RouteTable"
				}
			}
		},
		"PrivateSubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Condition": "3AZs",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet3"
				},
				"RouteTableId": {
					"Ref": "Private3RouteTable"
				}
			}
		},
		"GwlbSubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "GwlbSubnet1"
				},
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				}
			}
		},
		"GwlbSubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "GwlbSubnet2"
				},
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				}
			}
		},
		"GwlbSubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Condition": "3AZs",
			"Properties": {
				"SubnetId": {
					"Ref": "GwlbSubnet3"
				},
				"RouteTableId": {
					"Ref": "GwlbRouteTable"
				}
			}
		},
		"IgwRouteTableAssociation": {
			"Type": "AWS::EC2::GatewayRouteTableAssociation",
			"Properties": {
				"GatewayId": {
					"Ref": "InternetGateway"
				},
				"RouteTableId": {
					"Ref": "IgwRouteTable"
				}
			}
		}
	},
	"Outputs": {
		"DistributedInspection": {
			"Value": {
				"Ref": "DistributedInspection"
			},
			"Description": "Distributed inspection option selected"
		},
		"CloudWAN": {
			"Value": {
				"Ref": "CloudWan"
			},
			"Condition": "CloudWan",
			"Description": "Cloud WAN Core Network ID"
		},
		"CloudWanSegmentKey": {
			"Value": {
				"Ref": "CloudWanSegmentKey"
			},
			"Condition": "CloudWan",
			"Description": "Cloud WAN segment key"
		},
		"ClouCloudWanSegmentValue": {
			"Value": {
				"Ref": "CloudWanSegmentValue"
			},
			"Condition": "CloudWan",
			"Description": "Cloud WAN segment value"
		},
		"RouteToCwan": {
			"Value": {
				"Ref": "RouteToCwanOrTgw"
			},
			"Condition": "CloudWan",
			"Description": "VPC route to Cloud WAN in private subnets"
		},
		"TransitGateway": {
			"Value": {
				"Ref": "TransitGateway"
			},
			"Condition": "TransitGateway",
			"Description": "Transit Gateway ID"
		},
		"TransitGatewaySecurityRtb": {
			"Value": {
				"Ref": "TransitGatewaySecurityRtb"
			},
			"Condition": "TransitGateway",
			"Description": "Transit Gateway Route Table ID that the VPC will propagate to"
		},
		"TransitGatewaySpokeRtb": {
			"Value": {
				"Ref": "TransitGatewaySpokeRtb"
			},
			"Condition": "TransitGateway",
			"Description": "Transit Gateway Route Table ID that the VPC is associated to"
		},
		"RouteToTgw": {
			"Value": {
				"Ref": "RouteToCwanOrTgw"
			},
			"Condition": "TransitGateway",
			"Description": "VPC route to Transit Gateway in private subnets"
		}
	}
}
